Refactor: Extract CSS to separate styles.css file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&family=Noto+Sans+KR:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <style>
+    <link rel="stylesheet" href="styles.css" />
+    <!-- <style>
       * {
         margin: 0;
         padding: 0;
@@ -842,7 +843,7 @@
           font-size: 16px;
         }
       }
-    </style>
+    </style> -->
   </head>
   <body>
     <div class="presentation" id="presentation">
