--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
               <div class="essence-icon">💚</div>
               <h3>Обіцянка</h3>
               <p>
-                Відчуй вайб Кореї — плавний, смачний, культурно насичений. Кожна
-                пляшка — додає фану.
+                Відчуй вайб Кореї — динамічний, смачний, культурно насичений.
+                Кожна пляшка — додає фану.
               </p>
             </div>
           </div>
