--- a/index.html
+++ b/index.html
@@ -613,96 +613,18 @@
         <div class="slide-content">
           <h2 class="section-title">Концепція веб-сайту</h2>
           <div class="website-mockup">
-            <div class="browser-bar">
-              <div class="browser-dot"></div>
-              <div class="browser-dot"></div>
-              <div class="browser-dot"></div>
-              <div
-                style="
-                  margin-left: 20px;
-                  color: rgba(255, 255, 255, 0.5);
-                  font-size: 14px;
-                "
-              >
-                funju.ua
-              </div>
-            </div>
-            <div class="website-content">
-              <div
-                class="korean-text"
-                style="font-size: 32px; margin-bottom: 20px"
-              >
-                소주
-              </div>
-              <h1 class="mockup-hero">ДУХ КОРЕЇ<br />У ДУШІ УКРАЇНИ</h1>
-              <p class="mockup-text">
-                Відкрий для себе справжній корейський соджу.<br />
-                Плавний. Смачний. Автентичний.
-              </p>
-              <a href="#" class="mockup-button">ДОСЛІДЖУЙ СМАКИ</a>
-
-              <div
-                style="
-                  margin-top: 80px;
-                  display: grid;
-                  grid-template-columns: repeat(3, 1fr);
-                  gap: 40px;
-                  text-align: left;
-                "
-              >
-                <div
-                  style="
-                    padding: 30px;
-                    background: rgba(0, 0, 0, 0.3);
-                    border-radius: 15px;
-                  "
-                >
-                  <div style="font-size: 48px; margin-bottom: 15px">🍎</div>
-                  <h3
-                    style="font-size: 24px; margin-bottom: 10px; color: #ff6b9d"
-                  >
-                    ЯБЛУКО
-                  </h3>
-                  <p style="font-size: 14px; color: rgba(255, 255, 255, 0.6)">
-                    Свіжий яблучний смак з нотками стиглих фруктів
-                  </p>
-                </div>
-                <div
-                  style="
-                    padding: 30px;
-                    background: rgba(0, 0, 0, 0.3);
-                    border-radius: 15px;
-                  "
-                >
-                  <div style="font-size: 48px; margin-bottom: 15px">🍋</div>
-                  <h3
-                    style="font-size: 24px; margin-bottom: 10px; color: #16db93"
-                  >
-                    ЦИТРУС
-                  </h3>
-                  <p style="font-size: 14px; color: rgba(255, 255, 255, 0.6)">
-                    Цитрусовий вибух з освіжаючим післясмаком
-                  </p>
-                </div>
-                <div
-                  style="
-                    padding: 30px;
-                    background: rgba(0, 0, 0, 0.3);
-                    border-radius: 15px;
-                  "
-                >
-                  <div style="font-size: 48px; margin-bottom: 15px">✨</div>
-                  <h3
-                    style="font-size: 24px; margin-bottom: 10px; color: #e63946"
-                  >
-                    КЛАСИКА
-                  </h3>
-                  <p style="font-size: 14px; color: rgba(255, 255, 255, 0.6)">
-                    Нові смаки вже в розробці
-                  </p>
-                </div>
-              </div>
-            </div>
+            <iframe
+              src="https://funju-web.pages.dev/"
+              title="FUNJU Website"
+              style="
+                width: 100%;
+                min-height: 600px;
+                border-radius: 20px;
+                border: none;
+                box-shadow: 0 4px 32px rgba(0, 0, 0, 0.15);
+              "
+              allowfullscreen
+            ></iframe>
           </div>
           <div
             style="
