site-features-grid fix

--- a/index.html
+++ b/index.html
@@ -627,6 +627,7 @@
             ></iframe>
           </div>
           <div
+            class="site-features-grid"
             style="
               margin-top: 40px;
               display: grid;
@@ -634,53 +635,25 @@
               gap: 20px;
             "
           >
-            <div
-              style="
-                padding: 20px;
-                background: rgba(255, 255, 255, 0.05);
-                border-radius: 10px;
-                text-align: center;
-              "
-            >
+            <div>
               <strong style="color: #e63946">Paralax</strong><br />
               <span style="font-size: 14px; color: rgba(255, 255, 255, 0.6)"
                 >Ефекти прокрутки</span
               >
             </div>
-            <div
-              style="
-                padding: 20px;
-                background: rgba(255, 255, 255, 0.05);
-                border-radius: 10px;
-                text-align: center;
-              "
-            >
+            <div>
               <strong style="color: #16db93">3D модель</strong><br />
               <span style="font-size: 14px; color: rgba(255, 255, 255, 0.6)"
                 >Обертання пляшки</span
               >
             </div>
-            <div
-              style="
-                padding: 20px;
-                background: rgba(255, 255, 255, 0.05);
-                border-radius: 10px;
-                text-align: center;
-              "
-            >
+            <div>
               <strong style="color: #ff6b9d">Анімація</strong><br />
               <span style="font-size: 14px; color: rgba(255, 255, 255, 0.6)"
                 >Плавні переходи</span
               >
             </div>
-            <div
-              style="
-                padding: 20px;
-                background: rgba(255, 255, 255, 0.05);
-                border-radius: 10px;
-                text-align: center;
-              "
-            >
+            <div>
               <strong style="color: #ffb347">Mobile-first</strong><br />
               <span style="font-size: 14px; color: rgba(255, 255, 255, 0.6)"
                 >Адаптивний дизайн</span
