Add website overview

--- a/index.html
+++ b/index.html
@@ -626,15 +626,7 @@
               allowfullscreen
             ></iframe>
           </div>
-          <div
-            class="site-features-grid"
-            style="
-              margin-top: 40px;
-              display: grid;
-              grid-template-columns: repeat(4, 1fr);
-              gap: 20px;
-            "
-          >
+          <div class="site-features-grid">
             <div>
               <strong style="color: #e63946">Paralax</strong><br />
               <span style="font-size: 14px; color: rgba(255, 255, 255, 0.6)"
@@ -658,6 +650,76 @@
               <span style="font-size: 14px; color: rgba(255, 255, 255, 0.6)"
                 >Адаптивний дизайн</span
               >
+            </div>
+          </div>
+          <div
+            style="
+              margin-top: 40px;
+              padding: 30px;
+              background: rgba(230, 57, 70, 0.05);
+              border-radius: 15px;
+              border: 2px solid #e63946;
+            "
+          >
+            <strong style="color: #e63946; font-size: 20px">
+              Структура та функціональність вебсайту
+            </strong>
+            <ul
+              style="
+                margin-top: 18px;
+                margin-bottom: 18px;
+                font-size: 18px;
+                color: rgba(255, 255, 255, 0.85);
+                line-height: 1.7;
+              "
+            >
+              <li>
+                <strong style="color: #e63946">Hero-секція:</strong>
+                Демонструє поточну маркетингову кампанію або промо-пропозицію,
+                привертаючи увагу та задаючи тон бренду.
+              </li>
+              <li>
+                <strong style="color: #16db93">Продуктова cекція:</strong>
+                Презентує лінійку продуктів Funju та їх унікальні особливості.
+                Нові смаки та оновлення можуть додаватися у процесі розвитку
+                бренду.
+              </li>
+              <li>
+                <strong style="color: #ffb347">Find Funju:</strong>
+                Інтерактивна карта, що показує точки продажу партнерів по всій
+                країні. Користувач може зареєструватися, вказавши ім’я, місто та
+                email, щоб знайти найближчу точку продажу — одночасно
+                долучаючись до бази користувачів Funju.
+              </li>
+              <li>
+                <strong style="color: #ff6b9d">Funju Events:</strong>
+                Анонсує майбутні онлайн та офлайн події. Користувачі можуть
+                зареєструватися для участі, що допомагає збирати ліди та
+                розвивати спільноту бренду.
+              </li>
+              <li>
+                <strong style="color: #e63946">Funju Fans:</strong>
+                Галерея контенту, створеного фанами та блогерами-партнерами, з
+                TikTok-відео, Instagram Reels та відгуками, що передають
+                атмосферу та енергію Funju.
+              </li>
+            </ul>
+            <div
+              style="
+                margin-top: 18px;
+                font-size: 18px;
+                color: rgba(255, 255, 255, 0.85);
+                line-height: 1.7;
+              "
+            >
+              <strong style="color: #e63946">Огляд:</strong>
+              <br />
+              Вебсайт Funju створений як динамічна лендинг-сторінка,
+              оптимізована для інтернет-маркетингових кампаній. Основна мета —
+              привернути трафік, конвертувати відвідувачів у лояльних
+              користувачів та зібрати цінну базу даних для майбутніх програм
+              лояльності та утримання, надаючи користувачам як емоційну, так і
+              раціональну цінність.
             </div>
           </div>
         </div>
