upd website overview

--- a/index.html
+++ b/index.html
@@ -655,65 +655,99 @@
           <div
             style="
               margin-top: 40px;
-              padding: 30px;
+              padding: 36px;
               background: rgba(230, 57, 70, 0.05);
-              border-radius: 15px;
+              border-radius: 18px;
               border: 2px solid #e63946;
             "
           >
-            <strong style="color: #e63946; font-size: 20px">
-              Структура та функціональність вебсайту
-            </strong>
-            <ul
-              style="
-                margin-top: 18px;
-                margin-bottom: 18px;
-                font-size: 18px;
-                color: rgba(255, 255, 255, 0.85);
-                line-height: 1.7;
-              "
-            >
-              <li>
-                <strong style="color: #e63946">Hero-секція:</strong>
-                Демонструє поточну маркетингову кампанію або промо-пропозицію,
-                привертаючи увагу та задаючи тон бренду.
-              </li>
-              <li>
-                <strong style="color: #16db93">Продуктова cекція:</strong>
-                Презентує лінійку продуктів Funju та їх унікальні особливості.
-                Нові смаки та оновлення можуть додаватися у процесі розвитку
-                бренду.
-              </li>
-              <li>
-                <strong style="color: #ffb347">Find Funju:</strong>
-                Інтерактивна карта, що показує точки продажу партнерів по всій
-                країні. Користувач може зареєструватися, вказавши ім’я, місто та
-                email, щоб знайти найближчу точку продажу — одночасно
-                долучаючись до бази користувачів Funju.
-              </li>
-              <li>
-                <strong style="color: #ff6b9d">Funju Events:</strong>
-                Анонсує майбутні онлайн та офлайн події. Користувачі можуть
-                зареєструватися для участі, що допомагає збирати ліди та
-                розвивати спільноту бренду.
-              </li>
-              <li>
-                <strong style="color: #e63946">Funju Fans:</strong>
-                Галерея контенту, створеного фанами та блогерами-партнерами, з
-                TikTok-відео, Instagram Reels та відгуками, що передають
-                атмосферу та енергію Funju.
-              </li>
-            </ul>
             <div
               style="
-                margin-top: 18px;
-                font-size: 18px;
-                color: rgba(255, 255, 255, 0.85);
-                line-height: 1.7;
+                color: #e63946;
+                font-size: 28px;
+                font-weight: 800;
+                margin-bottom: 32px;
               "
             >
-              <strong style="color: #e63946">Огляд:</strong>
-              <br />
+              Структура та функціональність вебсайту
+            </div>
+            <div
+              style="
+                font-size: 22px;
+                color: rgba(255, 255, 255, 0.92);
+                line-height: 1.8;
+                margin-bottom: 24px;
+              "
+            >
+              <span style="color: #e63946; font-weight: 700">Hero-секція:</span>
+              Демонструє поточну маркетингову кампанію або промо-пропозицію,
+              привертаючи увагу та задаючи тон бренду.
+            </div>
+            <div
+              style="
+                font-size: 22px;
+                color: rgba(255, 255, 255, 0.92);
+                line-height: 1.8;
+                margin-bottom: 24px;
+              "
+            >
+              <span style="color: #e63946; font-weight: 700"
+                >Продуктова cекція:</span
+              >
+              Презентує лінійку продуктів Funju та їх унікальні особливості.
+              Нові смаки та оновлення можуть додаватися у процесі розвитку
+              бренду.
+            </div>
+            <div
+              style="
+                font-size: 22px;
+                color: rgba(255, 255, 255, 0.92);
+                line-height: 1.8;
+                margin-bottom: 24px;
+              "
+            >
+              <span style="color: #e63946; font-weight: 700">Find Funju:</span>
+              Інтерактивна карта, що показує точки продажу партнерів по всій
+              країні. Користувач може зареєструватися, вказавши ім’я, місто та
+              email, щоб знайти найближчу точку продажу — одночасно долучаючись
+              до бази користувачів Funju.
+            </div>
+            <div
+              style="
+                font-size: 22px;
+                color: rgba(255, 255, 255, 0.92);
+                line-height: 1.8;
+                margin-bottom: 24px;
+              "
+            >
+              <span style="color: #e63946; font-weight: 700"
+                >Funju Events:</span
+              >
+              Анонсує майбутні онлайн та офлайн події. Користувачі можуть
+              зареєструватися для участі, що допомагає збирати ліди та розвивати
+              спільноту бренду.
+            </div>
+            <div
+              style="
+                font-size: 22px;
+                color: rgba(255, 255, 255, 0.92);
+                line-height: 1.8;
+                margin-bottom: 32px;
+              "
+            >
+              <span style="color: #e63946; font-weight: 700">Funju Fans:</span>
+              Галерея контенту, створеного фанами та блогерами-партнерами, з
+              TikTok-відео, Instagram Reels та відгуками, що передають атмосферу
+              та енергію Funju.
+            </div>
+            <div
+              style="
+                font-size: 22px;
+                color: rgba(255, 255, 255, 0.92);
+                line-height: 1.8;
+              "
+            >
+              <span style="color: #e63946; font-weight: 700">Огляд:</span>
               Вебсайт Funju створений як динамічна лендинг-сторінка,
               оптимізована для інтернет-маркетингових кампаній. Основна мета —
               привернути трафік, конвертувати відвідувачів у лояльних
