upd website overview

--- a/index.html
+++ b/index.html
@@ -654,106 +654,135 @@
           </div>
           <div
             style="
-              margin-top: 40px;
-              padding: 36px;
+              margin-top: 48px;
+              padding: 40px;
               background: rgba(230, 57, 70, 0.05);
               border-radius: 18px;
               border: 2px solid #e63946;
+              max-width: 900px;
+              margin-left: auto;
+              margin-right: auto;
             "
           >
-            <div
+            <h3
               style="
                 color: #e63946;
-                font-size: 28px;
+                font-size: 32px;
                 font-weight: 800;
-                margin-bottom: 32px;
+                margin-bottom: 36px;
+                font-family: 'Montserrat', sans-serif;
+                letter-spacing: 0.5px;
               "
             >
               Структура та функціональність вебсайту
-            </div>
+            </h3>
             <div
               style="
-                font-size: 22px;
-                color: rgba(255, 255, 255, 0.92);
-                line-height: 1.8;
-                margin-bottom: 24px;
+                font-size: 24px;
+                color: rgba(255, 255, 255, 0.95);
+                font-family: 'Montserrat', sans-serif;
+                font-weight: 600;
+                margin-bottom: 28px;
+                line-height: 1.7;
               "
             >
               <span style="color: #e63946; font-weight: 700">Hero-секція:</span>
-              Демонструє поточну маркетингову кампанію або промо-пропозицію,
-              привертаючи увагу та задаючи тон бренду.
+              <span style="font-weight: 400">
+                Демонструє поточну маркетингову кампанію або промо-пропозицію,
+                привертаючи увагу та задаючи тон бренду.
+              </span>
             </div>
             <div
               style="
-                font-size: 22px;
-                color: rgba(255, 255, 255, 0.92);
-                line-height: 1.8;
-                margin-bottom: 24px;
+                font-size: 24px;
+                color: rgba(255, 255, 255, 0.95);
+                font-family: 'Montserrat', sans-serif;
+                font-weight: 600;
+                margin-bottom: 28px;
+                line-height: 1.7;
               "
             >
               <span style="color: #e63946; font-weight: 700"
                 >Продуктова cекція:</span
               >
-              Презентує лінійку продуктів Funju та їх унікальні особливості.
-              Нові смаки та оновлення можуть додаватися у процесі розвитку
-              бренду.
+              <span style="font-weight: 400">
+                Презентує лінійку продуктів Funju та їх унікальні особливості.
+                Нові смаки та оновлення можуть додаватися у процесі розвитку
+                бренду.
+              </span>
             </div>
             <div
               style="
-                font-size: 22px;
-                color: rgba(255, 255, 255, 0.92);
-                line-height: 1.8;
-                margin-bottom: 24px;
+                font-size: 24px;
+                color: rgba(255, 255, 255, 0.95);
+                font-family: 'Montserrat', sans-serif;
+                font-weight: 600;
+                margin-bottom: 28px;
+                line-height: 1.7;
               "
             >
               <span style="color: #e63946; font-weight: 700">Find Funju:</span>
-              Інтерактивна карта, що показує точки продажу партнерів по всій
-              країні. Користувач може зареєструватися, вказавши ім’я, місто та
-              email, щоб знайти найближчу точку продажу — одночасно долучаючись
-              до бази користувачів Funju.
+              <span style="font-weight: 400">
+                Інтерактивна карта, що показує точки продажу партнерів по всій
+                країні. Користувач може зареєструватися, вказавши ім’я, місто та
+                email, щоб знайти найближчу точку продажу — одночасно
+                долучаючись до бази користувачів Funju.
+              </span>
             </div>
             <div
               style="
-                font-size: 22px;
-                color: rgba(255, 255, 255, 0.92);
-                line-height: 1.8;
-                margin-bottom: 24px;
+                font-size: 24px;
+                color: rgba(255, 255, 255, 0.95);
+                font-family: 'Montserrat', sans-serif;
+                font-weight: 600;
+                margin-bottom: 28px;
+                line-height: 1.7;
               "
             >
               <span style="color: #e63946; font-weight: 700"
                 >Funju Events:</span
               >
-              Анонсує майбутні онлайн та офлайн події. Користувачі можуть
-              зареєструватися для участі, що допомагає збирати ліди та розвивати
-              спільноту бренду.
+              <span style="font-weight: 400">
+                Анонсує майбутні онлайн та офлайн події. Користувачі можуть
+                зареєструватися для участі, що допомагає збирати ліди та
+                розвивати спільноту бренду.
+              </span>
             </div>
             <div
               style="
-                font-size: 22px;
-                color: rgba(255, 255, 255, 0.92);
-                line-height: 1.8;
-                margin-bottom: 32px;
+                font-size: 24px;
+                color: rgba(255, 255, 255, 0.95);
+                font-family: 'Montserrat', sans-serif;
+                font-weight: 600;
+                margin-bottom: 36px;
+                line-height: 1.7;
               "
             >
               <span style="color: #e63946; font-weight: 700">Funju Fans:</span>
-              Галерея контенту, створеного фанами та блогерами-партнерами, з
-              TikTok-відео, Instagram Reels та відгуками, що передають атмосферу
-              та енергію Funju.
+              <span style="font-weight: 400">
+                Галерея контенту, створеного фанами та блогерами-партнерами, з
+                TikTok-відео, Instagram Reels та відгуками, що передають
+                атмосферу та енергію Funju.
+              </span>
             </div>
             <div
               style="
-                font-size: 22px;
-                color: rgba(255, 255, 255, 0.92);
-                line-height: 1.8;
+                font-size: 24px;
+                color: rgba(255, 255, 255, 0.95);
+                font-family: 'Montserrat', sans-serif;
+                font-weight: 600;
+                line-height: 1.7;
               "
             >
               <span style="color: #e63946; font-weight: 700">Огляд:</span>
-              Вебсайт Funju створений як динамічна лендинг-сторінка,
-              оптимізована для інтернет-маркетингових кампаній. Основна мета —
-              привернути трафік, конвертувати відвідувачів у лояльних
-              користувачів та зібрати цінну базу даних для майбутніх програм
-              лояльності та утримання, надаючи користувачам як емоційну, так і
-              раціональну цінність.
+              <span style="font-weight: 400">
+                Вебсайт Funju створений як динамічна лендинг-сторінка,
+                оптимізована для інтернет-маркетингових кампаній. Основна мета —
+                привернути трафік, конвертувати відвідувачів у лояльних
+                користувачів та зібрати цінну базу даних для майбутніх програм
+                лояльності та утримання, надаючи користувачам як емоційну, так і
+                раціональну цінність.
+              </span>
             </div>
           </div>
         </div>
