slide 9 font upd

--- a/index.html
+++ b/index.html
@@ -687,19 +687,27 @@
               "
             >
               <span style="color: #e63946; font-weight: 600">Hero-секція:</span>
-              <span style="font-weight: 400">
+              <span style="font-weight: 300">
                 Демонструє поточну маркетингову кампанію або промо-пропозицію,
                 привертаючи увагу та задаючи тон бренду.
               </span>
             </div>
             <div
               style="
-                font-size: 24px;
+                font-size: 18px;
                 color: rgba(255, 255, 255, 0.95);
                 font-family: 'Montserrat', sans-serif;
                 font-weight: 600;
                 margin-bottom: 28px;
                 line-height: 1.7;
+              "
+            >
+              <span style="color: #e63946; font-weight: 600">Hero-секція:</span>
+              <span style="font-weight: 400">
+                Демонструє поточну маркетингову кампанію або промо-пропозицію,
+                привертаючи увагу та задаючи тон бренду.
+              </span>
+            </div>
               "
             >
               <span style="color: #e63946; font-weight: 600"
@@ -713,7 +721,34 @@
             </div>
             <div
               style="
-                font-size: 24px;
+                font-size: 18px;
+                color: rgba(255, 255, 255, 0.95);
+                font-family: 'Montserrat', sans-serif;
+                font-weight: 600;
+                margin-bottom: 28px;
+                line-height: 1.7;
+              "
+            >
+              <span style="color: #e63946; font-weight: 600">Продуктова cекція:</span>
+              <span style="font-weight: 400">
+                Презентує лінійку продуктів Funju та їх унікальні особливості.
+                Нові смаки та оновлення можуть додаватися у процесі розвитку
+                бренду.
+              </span>
+            </div>
+              "
+            >
+              <span style="color: #e63946; font-weight: 600">Find Funju:</span>
+              <span style="font-weight: 400">
+                Інтерактивна карта, що показує точки продажу партнерів по всій
+                країні. Користувач може зареєструватися, вказавши ім’я, місто та
+                email, щоб знайти найближчу точку продажу — одночасно
+                долучаючись до бази користувачів Funju.
+              </span>
+            </div>
+            <div
+              style="
+                font-size: 18px;
                 color: rgba(255, 255, 255, 0.95);
                 font-family: 'Montserrat', sans-serif;
                 font-weight: 600;
@@ -729,14 +764,6 @@
                 долучаючись до бази користувачів Funju.
               </span>
             </div>
-            <div
-              style="
-                font-size: 24px;
-                color: rgba(255, 255, 255, 0.95);
-                font-family: 'Montserrat', sans-serif;
-                font-weight: 600;
-                margin-bottom: 28px;
-                line-height: 1.7;
               "
             >
               <span style="color: #e63946; font-weight: 600"
@@ -750,12 +777,21 @@
             </div>
             <div
               style="
-                font-size: 24px;
+                font-size: 18px;
                 color: rgba(255, 255, 255, 0.95);
                 font-family: 'Montserrat', sans-serif;
                 font-weight: 600;
                 margin-bottom: 36px;
                 line-height: 1.7;
+              "
+            >
+              <span style="color: #e63946; font-weight: 600">Funju Events:</span>
+              <span style="font-weight: 400">
+                Анонсує майбутні онлайн та офлайн події. Користувачі можуть
+                зареєструватися для участі, що допомагає збирати ліди та
+                розвивати спільноту бренду.
+              </span>
+            </div>
               "
             >
               <span style="color: #e63946; font-weight: 600">Funju Fans:</span>
@@ -767,7 +803,7 @@
             </div>
             <div
               style="
-                font-size: 24px;
+                font-size: 18px;
                 color: rgba(255, 255, 255, 0.95);
                 font-family: 'Montserrat', sans-serif;
                 font-weight: 600;
